<resources>
    <string name="app_name">FacaOBemV03</string>
    <string name="btn_Iniciar">Start</string>
    <string name="title_activity_doador">Doador</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_menu_ok">OK</string>
    <string name="action_menu_cancelar">Canceled</string>
    <string name="textViewTituloDoadores">Donors</string>
    <string name="lblInserirDoador">Insert New Donor</string>
    <string name="inputNomeDoador">Donor name:</string>
    <string name="btnSelecionaData">Select date</string>
    <string name="lblDataSelecionada">Selected Date</string>
    <string name="inputDataSelecionada">Selected Date</string>
    <string name="inputEmailDoador">Donor`s Email:</string>
    <string name="lblTelefoneDoador">Donor\'s phone:</string>
    <string name="inputTelefoneDoador">Donor\'s phone:</string>
    <string name="msgErrorNomeDoador">Preencha o nome do Doador!</string>
    <string name="msgErrorData">Seleciona uma data válida!</string>
    <string name="msgErrorEmailDoador">Preencha o email˜</string>
    <string name="msgErrorTelefone">Preencha o telefone!</string>
    <string name="msgDoadorInserido">Doador inserido com sucesso</string>
    <string name="msgErrorInserirDoador">Erro: não foi possivel inserir um doador</string>
    <string name="lblDeleteDoador">Delete Donor</string>
    <string name="lblAlteraDoador">Change Donor</string>
    <string name="txtNomeDoadorAlterar">Donor name</string>
    <string name="inputNomeDoadorAltera">Donor Name</string>
    <string name="inputEmailDoadorAltera">Donor\' s Email</string>
    <string name="inputTelefoneDoadorAltera">Donor\'s phone</string>
    <string name="msgUpdateDoadorSucess">Doador guardado com sucesso</string>
    <string name="msgErrorUpdateDoador">Erro: Não foi possível alterar o doador</string>
    <string name="msgSucessEliminarDoador">Doador eliminado com sucesso</string>
    <string name="msgErrorEliminarDoador">Erro: não foi possivel eliminar o doador</string>
    <string name="lblDetalheDoador">Donor\'s Details</string>
    <string name="btnCadastrarProduto">Add Product</string>
    <string name="lblCadastrarProduto">Add Product</string>
    <string name="inputNomeProduto">Name of Product</string>
    <string name="inputQuantidade">Quantity</string>
    <string name="lblListaProdutos">Produtct\'s List</string>
    <string name="btnVerListaProdutos">See Products</string>
    <string name="msgSuccessProduct">Produto inserido com sucesso</string>
    <string name="msgErrorInserirProduto">Não foi possível inserir um produto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnVerDoadores">See donors</string>
    <string name="btnVerProdutos">See Products</string>
    <string name="inputMarcaProduto">Brand of the product</string>
    <string name="inputDescription">Description</string>
    <string name="lblAlteraProduto">Change Product</string>
    <string name="msgSuccessAlterProduct">Produto alterado com sucesso</string>
    <string name="msgErrorAlterarProduto">Não foi possivel alterar o Produto</string>
    <string name="lblDeleteProduto">Delete Productor</string>
    <string name="btnDeleteProduto">Delete Product</string>
    <string name="btnCancelaDeletar">Canceled</string>
    <string name="msgSucessEliminarProduto">Produto deletado com sucesso</string>
    <string name="msgErrorEliminarProduto">Produto deletado com sucesso</string>
    <string name="lblDetalheProduto">Product\'s Details</string>
    <string name="lblListaCentros">Centers</string>
    <string name="lblAdicionaCentro">Add Centrer</string>
    <string name="inputNemoCentro">Name of the center</string>
    <string name="inputEndereco">Address</string>
    <string name="inputCidade">City</string>
    <string name="inputCep">Zip Code</string>
    <string name="msgErrorNomeInstituicao">Preencha o nome do centro</string>
    <string name="msgErrorEndereco">Preencha o Endereco</string>
    <string name="msgErrorCidade">Preencha a cidade</string>
    <string name="msgErrorCep">Preencha o cep</string>
    <string name="msgCentroInserido">Centro inserido com sucesso!</string>
    <string name="msgErrorInserirCentro">Erro ao inserir Centro!</string>
    <string name="lblAlterarCentro">Change Center</string>
    <string name="msgUpdateCentroSucess">Centro alterado com sucesso</string>
    <string name="msgErrorAlterarCentro">Erro ao alterar centro</string>
    <string name="lblDeletaCentro">Delete Center</string>
    <string name="btnDeleteCentro">Delete Centro</string>
    <string name="msgSucessEliminarCentro">Centro deletado com sucesso</string>
    <string name="msgErrorEliminarCentro">Erro ao deletar centro!</string>
</resources>
