<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AdicionaDoadoresFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionaDoadoresFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/icone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblInserirDoador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/lblInserirDoador"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblNomeDoador"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNomeDoador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputNomeDoador"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSelecionaData"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_baseline_date_range_24"
        android:paddingLeft="16dp"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNomeDoador" />

    <TextView
        android:id="@+id/lblDataSelecionada"
        android:layout_width="260dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/inputDataSelecionada"
        app:layout_constraintBottom_toTopOf="@+id/lblEmailDoador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnSelecionaData"
        app:layout_constraintTop_toBottomOf="@+id/lblNomeDoador" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblEmailDoador"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelecionaData">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailDoador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputEmailDoador"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblTelefoneDoador"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmailDoador">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTelefoneDoador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputTelefoneDoador"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>