<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alteraDoadoresFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alteraDoadoresFragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblAlteraDoador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="91dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="30dp"
        android:text="@string/lblAlteraDoador"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNomeDoadorAlterar"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNomeDoadorAltera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputNomeDoadorAltera" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSeleciaonaDataAltera"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_baseline_date_range_24"
        android:paddingLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeDoadorAlterar" />

    <TextView
        android:id="@+id/txtDataSelecionadaAlterar"
        android:layout_width="260dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnSeleciaonaDataAltera"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeDoadorAlterar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeleciaonaDataAltera">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailDoadorAltera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputEmailDoadorAltera" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTelefoneDoadorAltera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>